# weather_scr

./: README.md
weather_scr/: pyproject.toml
weather_scr/server/: config.py  main.py  scrap.py  tonconnect-manifest.json
weather_scr/server/example/: example_get.py  example_post.py
